--- a/public/verify.html
+++ b/public/verify.html
@@ -5,111 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Verify &amp; Print Sale Deed - PRTU</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #f3f6f8; margin: 0; padding: 20px; }
-    h2 { text-align: center; color: #003366; margin-bottom: 20px; }
-    .flash-msg {
-      display: none;
-      max-width: 500px;
-      margin: 0 auto 20px;
-      padding: 10px;
-      background: #ffe5e5;
-      color: #cc0000;
-      border: 1px solid #cc0000;
-      border-radius: 5px;
-      text-align: center;
-      font-weight: bold;
-    }
-    form {
-      max-width: 400px;
-      margin: 0 auto 30px;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
-    form label { display: block; margin-top: 10px; font-weight: bold; }
-    form input {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 14px;
-    }
-    form button {
-      margin-top: 15px;
-      padding: 10px;
-      background: #003366;
-      color: #fff;
-      border: none;
-      width: 100%;
-      border-radius: 4px;
-      font-size: 15px;
-      cursor: pointer;
-    }
-    #result {
-      display: none;
-      max-width: 960px;
-      margin: 0 auto;
-      background: #fff;
-      padding: 20px;
-      border: 1px solid #000;
-      border-radius: 6px;
-    }
-    .notary-header { text-align: center; margin-bottom: 20px; }
-    .notary-header h1 { margin: 0; font-size: 24px; }
-    .notary-header p { margin: 4px 0; font-size: 14px; }
-    .meta-info { margin-bottom: 20px; font-size: 14px; }
-    .meta-info div { margin: 4px 0; }
-    .exec-table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 20px;
-    }
-    .exec-table th, .exec-table td {
-      border: 1px solid #000;
-      padding: 8px;
-      vertical-align: top;
-      font-size: 14px;
-    }
-    .exec-table th { background: #e0e0e0; text-align: left; }
-    .sig-box {
-      width: 100%;
-      height: 80px;
-      border-bottom: 1px solid #000;
-    }
-    .contents, .schedule, .consideration {
-      border: 1px solid #000;
-      padding: 8px;
-      font-size: 14px;
-      margin-bottom: 10px;
-    }
-    .contents strong, .schedule strong, .consideration strong {
-      display: block;
-      margin-bottom: 4px;
-    }
-    #printBtn {
-      background: green;
-      color: #fff;
-      font-weight: bold;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      display: block;
-      margin: 20px auto;
-    }
+    body { font-family: Arial, sans-serif; margin:0; padding:20px; background:#f3f6f8; }
+    h2 { text-align:center; color:#003366; margin-bottom:20px; }
+    .flash { display:none; max-width:500px; margin:0 auto 20px; padding:10px; background:#ffe5e5; color:#cc0000; border:1px solid #cc0000; border-radius:5px; text-align:center; }
+    form { max-width:400px; margin:0 auto 30px; background:#fff; padding:20px; border-radius:8px; box-shadow:0 0 5px rgba(0,0,0,0.1); }
+    form label { display:block; margin-top:10px; font-weight:bold; }
+    form input { width:100%; padding:8px; margin-top:5px; border:1px solid #ccc; border-radius:4px; font-size:14px; }
+    form button { margin-top:15px; width:100%; padding:10px; background:#003366; color:#fff; border:none; border-radius:4px; font-size:15px; cursor:pointer; }
+    #deed { display:none; max-width:960px; margin:0 auto; background:#fff; padding:20px; border:1px solid #000; border-radius:6px; }
+    .header { text-align:center; margin-bottom:20px; }
+    .header h1 { margin:0; font-size:22px; }
+    .header p { margin:4px 0; font-size:14px; }
+    .meta { margin-bottom:20px; font-size:14px; }
+    .meta div { margin:4px 0; }
+    .parties { width:100%; border-collapse:collapse; margin-bottom:20px; }
+    .parties th, .parties td { border:1px solid #000; padding:8px; vertical-align:top; font-size:14px; }
+    .parties th { background:#e0e0e0; text-align:left; }
+    .sig-cell { width:150px; }
+    .sig-box { width:100%; height:80px; border-bottom:1px solid #000; }
+    .section { border:1px solid #000; padding:10px; margin-bottom:10px; font-size:14px; }
+    .section strong { display:block; margin-bottom:5px; }
+    #printBtn { display:block; margin:20px auto; padding:10px 20px; background:green; color:#fff; border:none; border-radius:4px; cursor:pointer; font-weight:bold; }
     @media print {
-      form, #printBtn, .flash-msg { display: none !important; }
-      body { background: #fff; padding: 0; }
-      #result { border: none; box-shadow: none; margin: 0; padding: 0; }
+      form, #printBtn, .flash { display:none !important; }
+      body { background:#fff; padding:0; }
+      #deed { border:none; box-shadow:none; margin:0; padding:0; }
     }
   </style>
 </head>
 <body>
-  <h2>Document Verification</h2>
-  <div id="flashMessage" class="flash-msg">❌ No matching record found.</div>
 
+  <h2>Verify Sale Deed</h2>
+  <div id="flash" class="flash">❌ No matching record found.</div>
   <form onsubmit="verifyRecord(event)">
     <label>Notary Registered Sr. No.:</label>
     <input type="text" id="notarySrNo" required />
@@ -118,150 +45,136 @@
     <button type="submit">Verify</button>
   </form>
 
-  <div id="result">
+  <div id="deed">
     <!-- Notary Header -->
-    <div class="notary-header">
+    <div class="header">
       <h1>ARCHANA PANDEY</h1>
       <p>Notary Public, Government of India</p>
-      <p>N.J House, Cabin no. B, Hiralal Chotelal compound, Bhaji Market, Old Station Road,<br>
-         Kalyan (West), Thane – 421301</p>
+      <p>N.J House, Cabin no.B Hiralal Chotelal compound, Bhaji Market, Old Station Road, Kalyan (West), Thane – 421301</p>
       <p>Email: pandavarchana77@gmail.com | Phone: +91 9220574357</p>
     </div>
 
-    <!-- Document Metadata -->
-    <div class="meta-info">
-      <div><strong>Serial Number:</strong> <span id="z_srno"></span></div>
-      <div><strong>Document Number:</strong> <span id="z_docno"></span></div>
-      <div><strong>Type of Document:</strong> <span id="z_docType"></span></div>
+    <!-- Metadata -->
+    <div class="meta">
+      <div><strong>Serial Number:</strong> <span id="m_srNo"></span></div>
+      <div><strong>Document Number:</strong> <span id="m_docNo"></span></div>
+      <div><strong>Type of Document:</strong> <span id="m_docType"></span></div>
     </div>
 
     <!-- Executing Parties Table -->
-    <table class="exec-table">
+    <table class="parties">
       <thead>
         <tr>
-          <th style="width:35%;">PARTY</th>
-          <th style="width:20%;">Digital Photo</th>
-          <th style="width:20%;">Thumb Impression</th>
-          <th style="width:25%;">Signature</th>
+          <th>PARTY DETAILS</th>
+          <th>PHOTO</th>
+          <th>THUMB IMPRESSION</th>
+          <th class="sig-cell">SIGNATURE</th>
         </tr>
       </thead>
       <tbody>
-        <!-- Purchaser -->
         <tr>
-          <td id="z_purchaser"></td>
-          <td><img id="z_photoP" width="100" alt="Photo"></td>
-          <td><img id="z_thumbP" width="100" alt="Thumb"></td>
-          <td><div class="sig-box"></div></td>
+          <td id="purchaserInfo"></td>
+          <td><img id="photoP" width="100" alt="Purchaser Photo"></td>
+          <td><img id="thumbP" width="100" alt="Purchaser Thumb"></td>
+          <td class="sig-cell"><div class="sig-box"></div></td>
         </tr>
-        <!-- Seller -->
         <tr>
-          <td id="z_seller"></td>
-          <td><img id="z_photoS" width="100" alt="Photo"></td>
-          <td><img id="z_thumbS" width="100" alt="Thumb"></td>
-          <td><div class="sig-box"></div></td>
+          <td id="sellerInfo"></td>
+          <td><img id="photoS" width="100" alt="Seller Photo"></td>
+          <td><img id="thumbS" width="100" alt="Seller Thumb"></td>
+          <td class="sig-cell"><div class="sig-box"></div></td>
         </tr>
-        <!-- Witness -->
         <tr>
-          <td id="z_witness"></td>
-          <td><img id="z_photoW" width="100" alt="Photo"></td>
-          <td><img id="z_thumbW" width="100" alt="Thumb"></td>
-          <td><div class="sig-box"></div></td>
+          <td id="witnessInfo"></td>
+          <td><img id="photoW" width="100" alt="Witness Photo"></td>
+          <td><img id="thumbW" width="100" alt="Witness Thumb"></td>
+          <td class="sig-cell"><div class="sig-box"></div></td>
         </tr>
       </tbody>
     </table>
 
-    <!-- Contents, Schedule & Consideration -->
-    <div class="contents">
-      <strong>CONTENTS OF THE DOCUMENT MENTIONED THEREIN:</strong>
-      <span id="z_contents"></span>
+    <!-- Contents -->
+    <div class="section">
+      <strong>CONTENTS OF THE DOCUMENT:</strong>
+      <div id="contents"></div>
     </div>
-    <div class="schedule">
+    <!-- Schedule -->
+    <div class="section">
       <strong>SCHEDULE OF PROPERTY:</strong>
-      <span id="z_schedule"></span>
+      <div id="schedule"></div>
     </div>
-    <div class="consideration">
+    <!-- Consideration -->
+    <div class="section">
       <strong>CONSIDERATION OF PROPERTY:</strong>
-      <span id="z_consideration"></span>
+      <div id="consideration"></div>
     </div>
 
-    <button id="printBtn" onclick="printRecord()">Print / Download</button>
+    <button id="printBtn" onclick="printDeed()">Print / Download</button>
   </div>
 
   <script>
-    async function verifyRecord(e) {
-      e.preventDefault();
+    async function verifyRecord(evt) {
+      evt.preventDefault();
       const sr = document.getElementById('notarySrNo').value.trim();
       const dn = document.getElementById('docNumber').value.trim();
-      const flash = document.getElementById('flashMessage');
-      const resDiv = document.getElementById('result');
-      flash.style.display = 'none';
-      resDiv.style.display = 'none';
+      const flash = document.getElementById('flash');
+      const deed  = document.getElementById('deed');
+      flash.style.display = deed.style.display = 'none';
 
       try {
-        const records = await (await fetch('/get-users')).json();
-        const r = records.find(u =>
-          u.metaNotarySrNo === sr &&
-          u.metaDocumentNumber === dn
-        );
-        if (!r) {
-          flash.innerText = '❌ Record not found.';
-          flash.style.display = 'block';
-          return;
+        const res = await fetch('/get-users');
+        const list = await res.json();
+        const r = list.find(u => u.metaNotarySrNo === sr && u.metaDocumentNumber === dn);
+        if (!r) throw new Error('not found');
+
+        // fill metadata
+        document.getElementById('m_srNo').innerText   = r.metaNotarySrNo;
+        document.getElementById('m_docNo').innerText  = r.metaDocumentNumber;
+        document.getElementById('m_docType').innerText= r.metaDocumentType;
+
+        // helper to build party info block
+        function partyHTML(pref) {
+          const labels = ['Name','Age','Occupation','Address','Contact','ID No.'];
+          const keys   = pref==='purchaser'
+            ? ['purchaserName','purchaserAge','purchaserOccupation','purchaserAddress','purchaserContact','purchaserIdNumber']
+            : pref==='seller'
+              ? ['sellerName','sellerAge','sellerOccupation','sellerAddress','sellerContact','sellerIdNumber']
+              : ['witnessName','witnessAge','witnessOccupation','witnessAddress','witnessContact','witnessIdNumber'];
+          return keys.map((k,i)=>`<div><strong>${labels[i]}:</strong> ${r[k]||'—'}</div>`).join('');
         }
 
-        // Fill metadata
-        document.getElementById('z_srno').innerText      = r.metaNotarySrNo;
-        document.getElementById('z_docno').innerText     = r.metaDocumentNumber;
-        document.getElementById('z_docType').innerText   = r.metaDocumentType;
+        // fill parties
+        document.getElementById('purchaserInfo').innerHTML = partyHTML('purchaser');
+        document.getElementById('photoP').src = r.photoP || '';
+        document.getElementById('thumbP').src = r.thumbP || '';
 
-        // Helper to render party details
-        function formatParty(prefix) {
-          const labels = ['Name','Age','Occupation','Residing At','Contact No.','Identification'];
-          const keys   = {
-            purchaser: ['purchaserName','purchaserAge','purchaserOccupation','purchaserAddress','purchaserContact','purchaserIdNumber'],
-            seller:    ['sellerName','sellerAge','sellerOccupation','sellerAddress','sellerContact','sellerIdNumber'],
-            witness:   ['witnessName','witnessAge','witnessOccupation','witnessAddress','witnessContact','witnessIdNumber']
-          }[prefix];
-          return keys.map((k,i) =>
-            `<div><strong>${labels[i]}:</strong> ${r[k]||'—'}</div>`
-          ).join('');
-        }
+        document.getElementById('sellerInfo').innerHTML = partyHTML('seller');
+        document.getElementById('photoS').src = r.photoS || '';
+        document.getElementById('thumbS').src = r.thumbS || '';
 
-        // Populate each row
-        document.getElementById('z_purchaser').innerHTML = formatParty('purchaser');
-        document.getElementById('z_photoP').src           = r.photoP   || '';
-        document.getElementById('z_thumbP').src           = r.thumbP   || '';
+        document.getElementById('witnessInfo').innerHTML = partyHTML('witness');
+        document.getElementById('photoW').src = r.photoW || '';
+        document.getElementById('thumbW').src = r.thumbW || '';
 
-        document.getElementById('z_seller').innerHTML    = formatParty('seller');
-        document.getElementById('z_photoS').src           = r.photoS   || '';
-        document.getElementById('z_thumbS').src           = r.thumbS   || '';
+        // fill bottom sections
+        document.getElementById('contents').innerText      = r.executingParties || '';
+        document.getElementById('schedule').innerText      = r.scheduleOfProperty || '';
+        document.getElementById('consideration').innerText = r.consideration || '';
 
-        document.getElementById('z_witness').innerHTML   = formatParty('witness');
-        document.getElementById('z_photoW').src           = r.photoW   || '';
-        document.getElementById('z_thumbW').src           = r.thumbW   || '';
-
-        // Footer sections
-        document.getElementById('z_contents').innerText       = r.metaDocumentType       || '';
-        document.getElementById('z_schedule').innerText      = r.scheduleOfProperty     || '';
-        document.getElementById('z_consideration').innerText = r.consideration          || '';
-
-        resDiv.style.display = 'block';
-      } catch (err) {
-        console.error(err);
+        deed.style.display = 'block';
+      } catch (e) {
         flash.innerText = '❌ Error fetching record.';
         flash.style.display = 'block';
       }
     }
 
-    function printRecord() {
-      const orig = document.body.innerHTML;
-      document.body.innerHTML = document.getElementById('result').outerHTML;
+    function printDeed() {
+      const original = document.body.innerHTML;
+      document.body.innerHTML = document.getElementById('deed').outerHTML;
       window.print();
-      document.body.innerHTML = orig;
+      document.body.innerHTML = original;
       window.location.reload();
     }
   </script>
 </body>
 </html>
-```
-
