Final verify.html

--- a/public/verify.html
+++ b/public/verify.html
@@ -74,7 +74,7 @@
     <table class="exec-table">
       <thead>
         <tr>
-          <th style="width:35%">PARTY</th>
+          <th style="width:35%">Executing Parties: Purchaser</th>
           <th style="width:20%">Digital Photo</th>
           <th style="width:20%">Thumb Impression</th>
           <th style="width:25%">Signature</th>
@@ -87,11 +87,26 @@
           <td><img id="z_thumbP" width="100"></td>
           <td><div class="sig-box"></div></td>
         </tr>
+         <tr>
+          <th style="width:35%">Executing Parties: Seller</th>
+          <th style="width:20%">Digital Photo</th>
+          <th style="width:20%">Thumb Impression</th>
+          <th style="width:25%">Signature</th>
+        </tr>
         <tr>
           <td id="z_seller"></td>
           <td><img id="z_photoS" width="100"></td>
           <td><img id="z_thumbS" width="100"></td>
           <td><div class="sig-box"></div></td>
+        </tr>
+        <tr>
+          <th style="width:25%">SIGNED AND EXECUTED BY ABOVE PARTIES IN PRESENCE OF: </th>
+        </tr>
+        <tr>
+          <th style="width:35%">Executing Parties: Witness 1</th>
+          <th style="width:20%">Digital Photo</th>
+          <th style="width:20%">Thumb Impression</th>
+          <th style="width:25%">Signature</th>
         </tr>
         <tr>
           <td id="z_witness"></td>
@@ -176,3 +191,4 @@
   </script>
 </body>
 </html>
+
